# waffles

./: .gitignore  README.md
src/: Makefile.am  Makefile.in  configure  configure.ac  waffles.pc.in
src/GClasses/: GLearner.cpp  GLearnerLib.cpp  Makefile.am  Makefile.in
src/audio/: Makefile.am  Makefile.in
src/cluster/: Makefile.am  Makefile.in
src/debian/: changelog  control  copyright  rules  waffles-dev.install
src/dimred/: Makefile.am  Makefile.in
src/learn/: Makefile.am  Makefile.in
src/plot/: Makefile.am  Makefile.in
src/recommend/: Makefile.am  Makefile.in
src/sparse/: Makefile.am  Makefile.in
src/test/: Makefile.am  Makefile.in
src/transform/: Makefile.am  Makefile.in
src/wizard/: Makefile.am  Makefile.in
