lib_LIBRARIES = libGClasses.a

libGClasses_a_SOURCES = \
	G3D.cpp\
	GActivation.cpp\
	GApp.cpp\
	GAssignment.cpp\
	GBayesianNetwork.cpp\
	GBezier.cpp\
	GBigInt.cpp\
	GBits.cpp\
	GBitTable.cpp\
	GBlob.cpp\
	GCluster.cpp\
	GCrypto.cpp\
	GDecisionTree.cpp\
	GDiff.cpp\
	GDirList.cpp\
	GDistance.cpp\
	GDistribution.cpp\
	GDom.cpp\
	GDynamicPage.cpp\
	GEnsemble.cpp\
	GError.cpp\
	GEvolutionary.cpp\
	GFile.cpp\
	GFourier.cpp\
	GFunction.cpp\
	GGaussianProcess.cpp\
	GGraph.cpp\
	GGridSearch.cpp\
	GHashTable.cpp\
	GHeap.cpp\
	GHiddenMarkovModel.cpp\
	GHillClimber.cpp\
	GHistogram.cpp\
	GHolders.cpp\
	GHtml.cpp\
	GHttp.cpp\
	GImage.cpp\
	GKalman.cpp\
	GKernelTrick.cpp\
	GKeyPair.cpp\
	GKNN.cpp\
	GLayer.cpp\
	GLearner.cpp\
	GLearnerLib.cpp\
	GLinear.cpp\
	GManifold.cpp\
	GMath.cpp\
	GMatrix.cpp\
	GMixtureOfGaussians.cpp\
	GNaiveBayes.cpp\
	GNaiveInstance.cpp\
	GNeighborFinder.cpp\
	GNeuralNet.cpp\
	GOptimizer.cpp\
	GParticleSwarm.cpp\
	GPlot.cpp\
	GPolicyLearner.cpp\
	GPolynomial.cpp\
	GPriorityQueue.cpp\
	GRayTrace.cpp\
	GReverseBits.cpp\
	GRect.cpp\
	GRand.cpp\
	GRecommender.cpp\
	GRecommenderLib.cpp\
	GRegion.cpp\
	GReinforcement.cpp\
	GSDL.cpp\
	GSelfOrganizingMap.cpp\
	GSmtp.cpp\
	GSocket.cpp\
	GSparseMatrix.cpp\
	GStemmer.cpp\
	GString.cpp\
	GSystemLearner.cpp\
	GText.cpp\
	GThread.cpp\
	GTime.cpp\
	GTokenizer.cpp\
	GTransform.cpp\
	GTree.cpp\
	GVec.cpp\
	GWave.cpp\
	GWidgets.cpp\
	GWindows.cpp\
	sha1.cpp\
	sha2.cpp\
	usage.cpp

