lib_LIBRARIES = libGClasses.a

libGClasses_a_SOURCES = \
	G3D.cpp\
	GActivation.cpp\
	GApp.cpp\
	GAssignment.cpp\
	GBayesianNetwork.cpp\
	GBezier.cpp\
	GBigInt.cpp\
	GBits.cpp\
	GBitTable.cpp\
	GBlob.cpp\
	GCluster.cpp\
	GCrypto.cpp\
	GDecisionTree.cpp\
	GDiff.cpp\
	GDirList.cpp\
	GDistance.cpp\
	GDistribution.cpp\
	GDom.cpp\
	GDynamicPage.cpp\
	GEnsemble.cpp\
	GError.cpp\
	GEvolutionary.cpp\
	GFile.cpp\
	GFourier.cpp\
	GFunction.cpp\
	GGaussianProcess.cpp\
	GGraph.cpp\
	GGridSearch.cpp\
	GHashTable.cpp\
	GHeap.cpp\
	GHiddenMarkovModel.cpp\
	GHillClimber.cpp\
	GHistogram.cpp\
	GHolders.cpp\
	GHtml.cpp\
	GHttp.cpp\
	GImage.cpp\
	GKalman.cpp\
	GKernelTrick.cpp\
	GKeyPair.cpp\
	GKNN.cpp\
	GLayer.cpp\
	GLearner.cpp\
	GLearnerLib.cpp\
	GLinear.cpp\
	GManifold.cpp\
	GMath.cpp\
	GMatrix.cpp\
	GMixtureOfGaussians.cpp\
	GNaiveBayes.cpp\
	GNaiveInstance.cpp\
	GNeighborFinder.cpp\
	GNeuralNet.cpp\
	GOptimizer.cpp\
	GParticleSwarm.cpp\
	GPlot.cpp\
	GPolicyLearner.cpp\
	GPolynomial.cpp\
	GPriorityQueue.cpp\
	GRayTrace.cpp\
	GReverseBits.cpp\
	GRect.cpp\
	GRand.cpp\
	GRecommender.cpp\
	GRecommenderLib.cpp\
	GRegion.cpp\
	GReinforcement.cpp\
	GSDL.cpp\
	GSelfOrganizingMap.cpp\
	GSmtp.cpp\
	GSocket.cpp\
	GSparseMatrix.cpp\
	GStemmer.cpp\
	GString.cpp\
	GSystemLearner.cpp\
	GText.cpp\
	GThread.cpp\
	GTime.cpp\
	GTokenizer.cpp\
	GTransform.cpp\
	GTree.cpp\
	GVec.cpp\
	GWave.cpp\
	GWidgets.cpp\
	GWindows.cpp\
	sha1.cpp\
	sha2.cpp\
	usage.cpp

pkginclude_HEADERS = \
	G3D.h \
	GActivation.h \
	GApp.h \
	GAssignment.h \
	GBayesianNetwork.h \
	GBezier.h \
	GBigInt.h \
	GBits.h \
	GBitTable.h \
	GBlob.h \
	GCluster.h \
	GCrypto.h \
	GDecisionTree.h \
	GDiff.h \
	GDirList.h \
	GDistance.h \
	GDistribution.h \
	GDom.h \
	GDynamicPage.h \
	GEnsemble.h \
	GError.h \
	GEvolutionary.h \
	GFile.h \
	GFourier.h \
	GFunction.h \
	GGaussianProcess.h \
	GGraph.h \
	GGridSearch.h \
	GHashTable.h \
	GHeap.h \
	GHiddenMarkovModel.h \
	GHillClimber.h \
	GHistogram.h \
	GHolders.h \
	GHtml.h \
	GHttp.h \
	GImage.h \
	GKalman.h \
	GKernelTrick.h \
	GKeyPair.h \
	GKNN.h \
	GLayer.h \
	GLearner.h \
	GLearnerLib.h \
	GLinear.h \
	GManifold.h \
	GMath.h \
	GMatrix.h \
	GMixtureOfGaussians.h \
	GNaiveBayes.h \
	GNaiveInstance.h \
	GNeighborFinder.h \
	GNeuralNet.h \
	GOptimizer.h \
	GParticleSwarm.h \
	GPlot.h \
	GPolicyLearner.h \
	GPolynomial.h \
	GPriorityQueue.h \
	GRand.h \
	GRayTrace.h \
	GRecommender.h \
	GRecommenderLib.h \
	GRect.h \
	GRegion.h \
	GReinforcement.h \
	GReverseBits.h \
	GSDL.h \
	GSelfOrganizingMap.h \
	GSmtp.h \
	GSocket.h \
	GSparseMatrix.h \
	GStemmer.h \
	GString.h \
	GSystemLearner.h \
	GText.h \
	GThread.h \
	GTime.h \
	GTokenizer.h \
	GTransform.h \
	GTree.h \
	GVec.h \
	GWave.h \
	GWidgets.h \
	GWindows.h \
	sha1.h \
	sha2.h \
	uitypes.h \
	usage.h
